Corrected doc; Modified command for clarity;

--- a/onedrive.service
+++ b/onedrive.service
@@ -1,18 +1,18 @@
 [Unit]
 Description=Onedrive mount (rclone)
-Documentation=man:rcloud(1)
+Documentation=man:rclone(1)
 Wants=network-online.target
 After=network-online.target
 
 [Service]
 Type=notify
-ExecStartPre=mkdir /mnt/%u/serieUni
+ExecStartPre=mkdir -p /mnt/%u/serieUni
 ExecStart=/usr/bin/rclone mount \
 	--vfs-cache-mode full \
 	--transfers 8 \
 	--log-systemd --log-level INFO \
 	onedrive:serieUni /mnt/%u/serieUni
-ExecStartPost=ln -s /mnt/%u/serieUni %h/Documents/serieUni
+ExecStartPost=ln -sf -t %h/Documents/ /mnt/%u/serieUni
 
 ExecStop=unlink %h/Documents/serieUni
 ExecStop=/usr/bin/fusermount -uz /mnt/%u/serieUni
